[gd_scene load_steps=2 format=3 uid="uid://iobhwofkmfbg"]

[ext_resource type="Script" uid="uid://bfeuyemvnlxta" path="res://volume_slider.gd" id="1_e8uio"]

[node name="VolumeSlider" type="HSlider"]
offset_right = 8.0
offset_bottom = 16.0
max_value = 1.0
step = 0.001
script = ExtResource("1_e8uio")

[connection signal="drag_ended" from="." to="." method="_on_drag_ended"]
[connection signal="value_changed" from="." to="." method="_on_value_changed"]
